aggiunto bottone replay

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     <title>Simon Says</title>
 </head>
 <body>
+    <h1 class="text-center">Simon Says</h1>
     <div id="numeri"></div>
     <br>
     <input type="number" id="my_input" placeholder="Inserisci i 5 numeri">
     <button id="inserisci_btn">Inserisci</button>
     <p id="lista_numeri_utente"></p>
     <p id="risultatoHTML"></p>
+    <button id="replay_btn" class="d-none">Replay</button>
     
 
 
